# raytacer

./: .gitignore  Cargo.toml
scenes/: random_spheres.yaml  three_spheres.yaml  three_spheres_glass.yaml
src/: lib.rs  main.rs
src/camera/: len.rs  lens.rs  mod.rs
src/colour/: mod.rs
src/geometry/: material.rs  mod.rs  shape.rs
src/hit/: mod.rs
src/pixel/: mod.rs  rgb.rs
src/ray/: mod.rs
src/scene/: mod.rs
src/vec/: mod.rs
