[package]
name = "raytacer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = { version = "0.17.6", features = ["rayon"] }
png = "0.17.10"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
